# facebook-marketplace-scraper

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PULL_REQUEST_TEMPLATE.md  Pipfile  README.md  SECURITY.md  main.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
fb_scraper/: __init__.py  browser.py  cli.py  config.py  scraper.py  storage.py
tests/: conftest.py  test_browser.py  test_cli.py  test_config.py  test_detail.py  test_e2e.py  test_flatten.py  test_page_helpers.py  test_scrape.py  test_search.py  test_storage.py
